--- a/badapple2/public/stylesheets/index.css
+++ b/badapple2/public/stylesheets/index.css
@@ -263,5 +263,33 @@ address a{
 address a:hover{
   color: white;
 }
-
+@media (max-width:700px){
+  #badapp{
+    font-size: 20px;
+  }
+  .logo{
+    background: rgb(209, 14, 14);
+    border-radius: 10px;
+    min-width: 210px;
+    height: 50px;
+    align-items: center;
+  }
+  li a{
+    font-size: 15px;
+    padding: 12px 7px;
+    margin-top: 5px;
+  }
+  .perfil img {
+    margin-right: 20px;
+    padding: 5px;
+    width: 60px;
+    height: 40px;
+  }
+  .efeito{
+    width: 50px;
+  }
+  .header{
+ height: 55px;
+   }
+}
 
